tweak json wording

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -32,9 +32,9 @@ reference to create an unzipped feature. The full list of available functions ca
 
 ### JSON feature type
 
-You can now define features as JSON values and reference the JSON fields in feature, resolver,
-and query definitions. Read more on how to define and reference JSON features
-[here](https://docs.chalk.ai/api-docs#json_value).
+You can now define features with `JSON` as the type after importing `JSON` from the `chalk` module. You can then
+reference the JSON feature in resolver and query definitions. You can also retrieve scalar values from JSON features
+using the [`json_value`](/api-docs#json_value) function.
 
 ## September 9, 2024
 
