--- a/changelog.mdx
+++ b/changelog.mdx
@@ -59,7 +59,7 @@ show how to use Chalk to generate training datasets from within a SageMaker pipe
 
 ### Feature catalog shows associated named queries
 
-In the [August 19](/docs/changelog#queries-can-reference-multiple-feature-namespaces) changelog entry, we announced
+In the [August 19](/docs/changelog#execute-queries-by-name) changelog entry, we announced
 [`NamedQuery`](/api-docs#NamedQuery), a tool for naming your queries so that you can execute them without writing out
 the full query definition.
 
