--- a/changelog.mdx
+++ b/changelog.mdx
@@ -107,10 +107,10 @@ NamedQuery(
         Book.short_description: "0s"
     },
     owner="mary.shelley@aol.com",
-    description=((
+    description=(
         "Return a condensed view of a book, including its title, author, "
         "year, and short description."
-    ))
+    )
 )
 ```
 
