update meta descriptions and titles for docs pages

--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -1,5 +1,7 @@
 ---
 title: Windowed
+metaTitle: Windowed Aggregations
+metaDescription: Chalk windowed features are a fast way to define data aggregations over arbitrary time ranges.
 description: Define features as aggregations of data over sliding time ranges.
 published: true
 ---
