--- a/architecture.mdx
+++ b/architecture.mdx
@@ -1,5 +1,7 @@
 ---
 title: Platform Architecture
+metaTitle: Chalk Architecture
+metaDescription: Chalk's architecture enables machine learning companies to use Chalk's feature store in their own cloud environment.
 description: How it all fits together.
 ---
 
