--- a/changelog.mdx
+++ b/changelog.mdx
@@ -1,5 +1,7 @@
 ---
 title: Changelog
+metaTitle: Chalk Product Changelog
+metaDescription: Chalk's latest updates.
 description: Updates to Chalk!
 ---
 
