--- a/faq.mdx
+++ b/faq.mdx
@@ -1,5 +1,7 @@
 ---
 title: Frequently Asked Questions
+metaTitle: FAQs
+metaDescription: A collection of questions frequently asked by customers.
 description: A collection of questions frequently asked by customers
 ---
 
