--- a/feature-version-tutorial.mdx
+++ b/feature-version-tutorial.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Tutorial: Feature Versions"
+metaTitle: "Tutorial: Feature Versions"
+metaDescription: Learn how to create and track multiple feature versions with Chalk.
 description: Learn how to create and interact with versioned features
 ---
 
