--- a/fraud-tutorial.mdx
+++ b/fraud-tutorial.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Tutorial: Fraud Detection Pipeline"
+metaTitle: "Tutorial: Building a fraud pipeline"
+metaDescription: Learn how to build a pipeline for detecting fraud with Chalk.
 description: Build a feature pipeline for fraud detection.
 published: true
 ---
