--- a/notebook-development.mdx
+++ b/notebook-development.mdx
@@ -1,5 +1,7 @@
 ---
 title: Notebook Development
+metaTitle: Notebook Development
+metaDescription: Chalk makes notebook development easy. Use Jupyter or any other notebook system to explore your feature data, then seamlessly use the same feature logic in production.
 description: Use Chalk in your notebook of choice.
 published: true
 ---
