--- a/notebook-tutorial.mdx
+++ b/notebook-tutorial.mdx
@@ -1,5 +1,7 @@
 ---
 title: Jupyter Notebook Tutorial
+metaTitle: "Tutorial: Jupyter Notebook"
+metaDescription: Learn how to use Chalk with Jupyter notebooks for feature exploration and data science.
 description: Work through an example using Chalk in a Jupyter notebook
 published: true
 ---
