--- a/sagemaker-tutorial.mdx
+++ b/sagemaker-tutorial.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Tutorial: AWS SageMaker with Chalk"
+metaTitle: "Tutorial: AWS SageMaker"
+metaDescription: Learn how to use Chalk within an AWS SageMaker pipeline for model training and serving.
 description: Build a Chalk feature pipeline for training and serving models with AWS SageMaker.
 published: true
 ---
