--- a/branches.mdx
+++ b/branches.mdx
@@ -1,5 +1,7 @@
 ---
 title: Working With Branches
+metaTitle: Working with Branches
+metaDescription: Branch deployments allow users to iterate on feature pipelines in separate deployments mirroring production.
 description: Make rapid changes and explore features with branches.
 ---
 
