--- a/features.mdx
+++ b/features.mdx
@@ -1,5 +1,7 @@
 ---
 title: Overview
+metaTitle: Features - Define features for training and inference.
+metaDescription: Features are properties of your data you want to train your model on. With Chalk, you can define your features in Python.
 description: Define features for training and inference.
 ---
 
@@ -206,7 +208,8 @@ IDs are [auto-assigned](/docs/features#primary-keys) based
 on the name provided to `feature(name=...)`.
 
 ## Default feature values
-For features that can't always be computed, you can pass `default` to 
+
+For features that can't always be computed, you can pass `default` to
 [`feature`](/api-docs#feature.default), or assign a default directly:
 
 ```python
@@ -215,4 +218,3 @@ from chalk.features import features
 class User:
     num_purchases: int = 0
 ```
-
