--- a/lifecycle.mdx
+++ b/lifecycle.mdx
@@ -1,5 +1,7 @@
 ---
 title: Feature Development Lifecycle
+metaTitle: Feature Development Lifecycle
+metaDescription: Chalk is the fastest way to deploy new feature pipelines to production.
 description: Developing, testing, deploying, and backfilling a new feature
 ---
 
