--- a/observability.mdx
+++ b/observability.mdx
@@ -1,5 +1,7 @@
 ---
 title: Overview
+metaTitle: Observability - Monitor the execution of your feature pipelines
+metaDescription: Chalk monitors the execution of your feature pipelines and is able to alert you when problems arise.
 description: Monitor the execution of your feature pipelines & alert you when problems arise.
 ---
 
