--- a/resolver-overview.mdx
+++ b/resolver-overview.mdx
@@ -1,5 +1,7 @@
 ---
 title: Overview
+metaTitle: Resolvers - Create resolvers to compute feature values.
+metaDescription: Resolvers define how your feature values are computed. Resolvers can be written in Python or SQL.
 description: Create resolvers to compute feature values.
 ---
 
