--- a/security.mdx
+++ b/security.mdx
@@ -1,5 +1,7 @@
 ---
 title: Security Overview
+metaTitle: Security Overview and Privacy Protection
+metaDescription: At Chalk, protecting customer data is core to our mission. We integrate security best practices into every aspect of our operations and product development.
 description: How Chalk protects your data.
 ---
 
