--- a/setup-guide.mdx
+++ b/setup-guide.mdx
@@ -1,5 +1,7 @@
 ---
 title: How do I use Chalk?
+metaTitle: Chalk Setup Guide
+metaDescription: A step-by-step guide for customizing your Chalk solution to help you achieve all of your data goals.
 description: Customizing your Chalk solution.
 ---
 
