--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -1,5 +1,7 @@
 ---
 title: What is Chalk?
+metaTitle: What is Chalk?
+metaDescription: 'Chalk is a feature store that enables innovative machine learning teams to focus on building the unique products and models that make their business stand out.'
 titleHidden: true
 hideToc: true
 ---
