--- a/query-basics.mdx
+++ b/query-basics.mdx
@@ -112,7 +112,7 @@ the request.
 </Attribute>
 
 <Attribute field={'query_name'} kind={'string?'}>
-  The query name.  Information about <a href={'/docs/metricmonitor'}>Named Queries</a> is available in the dashboard.
+  The query name. See <a href={'/api-docs#NamedQuery'}>NamedQuery</a> for more details.
 </Attribute>
 
 <Attribute field={'branch'} kind={'string?'}>
