--- a/feature-caching.mdx
+++ b/feature-caching.mdx
@@ -29,7 +29,7 @@ class User:
 ```
 
 Max staleness durations can be given in
-[natural language](/docs/duration),
+[natural language](/api-docs#Duration),
 or specified using
 [datetime.timedelta](https://docs.python.org/3/library/datetime.html#timedelta-objects).
 You can specify a max staleness of "infinity" to indicate that Chalk should cache computed feature
