--- a/sql.mdx
+++ b/sql.mdx
@@ -287,7 +287,7 @@ The following are supported keys that may be included in `.chalk.sql` file comme
 </Attribute>
 <Attribute field='timeout' kind='Duration | null'>
     The maximum time to wait before timing out the query.
-    See <a href="/docs/duration">Duration</a> for more details.
+    See <a href="/api-docs#Duration">Duration</a> for more details.
 </Attribute>
 <Attribute field='tags' kind='list[str] | null'>
     The user tags associated with this resolver. For online and offline resolvers.
