--- a/timeout.mdx
+++ b/timeout.mdx
@@ -33,7 +33,7 @@ def resolve_canadian_credit_score(
 ) -> User.credit_score_can:
     return equifax_client.get_score(user_si_number)
 ```
-See [Duration](/docs/duration) for supported durations.
+See [Duration](/api-docs#Duration) for supported durations.
 
 ---
 
