--- a/resolver-cron.mdx
+++ b/resolver-cron.mdx
@@ -16,7 +16,7 @@ def fn() -> DataFrame[User.id, User.name]:
     return ...
 ```
 
-The `cron` keyword arguments takes a [duration](/docs/duration)
+The `cron` keyword arguments takes a [duration](/api-docs#Duration)
 to determine the schedule on which to run.  For more fine-grained control,
 you can alternatively specify a [crontab](https://man7.org/linux/man-pages/man5/crontab.5.html).
 
