--- a/best-practices.mdx
+++ b/best-practices.mdx
@@ -99,7 +99,7 @@ is going wrong with the feature you are calculating.
 
 Joins between feature classes can be specified in a number of different ways.
 We recommend using an implicit join syntax, which
-[we cover in the join section of the docs](/docs/has-one#recommended-implementation).
+[we cover in the join section of the docs](/docs/has-one#foreign-keys).
 
 ---
 
