--- a/has-many.mdx
+++ b/has-many.mdx
@@ -13,13 +13,15 @@ import { TipInfo } from '@/components/Tip'
 
 Has-many relationships link a feature to many instances of another feature.
 
-## Recommended Implementation
+---
+
+## Foreign Keys
 
 The recommended way to specify a join for a has-many relationship is implicitly. In the
 example below, a `User` is linked to potentially multiple `Transfer`s.
 
 ```py
-from chalk.features import features, DataFrame, ...
+from chalk.features import features, DataFrame
 
 @features
 class Transfer:
@@ -34,6 +36,8 @@ class User:
     id: str
     transfers: DataFrame[Transfer]
 ```
+
+---
 
 ## Explicit Join
 
@@ -53,6 +57,8 @@ class User:
     id: str
     transfers: DataFrame[Transfer] = has_many(lambda: Transfer.user_id == User.id)
 ```
+
+---
 
 ## Aggregations on References
 
