--- a/debugging-queries.mdx
+++ b/debugging-queries.mdx
@@ -22,7 +22,7 @@ in its definition, and explore various ways to debug that issue.
 
 ```python
 from datetime import datetime
-from chalk import features, has_many, DataFrame
+from chalk.features import features, has_many, DataFrame
 
 @features
 class Transaction:
