--- a/fraud-4.mdx
+++ b/fraud-4.mdx
@@ -119,7 +119,7 @@ from our credit scoring vendor,
 As before, we'll first add the features that we want to compute:
 
 ```diff-py src/models.py
-+ from chalk.features import feature
++ from chalk.features import features
 
 @features
 class User:
