--- a/unit-tests.mdx
+++ b/unit-tests.mdx
@@ -18,8 +18,8 @@ functions.
 Consider the following features and resolvers:
 
 ```py example.py
-from chalk.features import features
-from chalk import online, Features
+from chalk.features import features, Features
+from chalk import online
 
 @features
 class Home:
