--- a/feature-types.mdx
+++ b/feature-types.mdx
@@ -61,7 +61,7 @@ Struct types should be used for objects that don't have ids. If an object has an
 
 ### Dataclass
 
-You can use any `dataclass` as a struct feature. 
+You can use any `dataclass` as a struct feature.
 
 ```python
 @dataclass
@@ -117,11 +117,11 @@ class Book:
 
 ## Document
 
-Both [dataclass](/docs/feature-types#dataclass) and [Pydantic](/docs/feature-types#pydantic-models) 
-structs are implemented using the [PyArrow](https://arrow.apache.org/docs/python/index.html) 
-serialization format, a high-performance schema for data serialization.  
+Both [dataclass](/docs/feature-types#dataclass) and [Pydantic](/docs/feature-types#pydantic-models)
+structs are implemented using the [PyArrow](https://arrow.apache.org/docs/python/index.html)
+serialization format, a high-performance schema for data serialization.
 This data is stored "value only", i.e. without keys, so any change to these structs over time will invalidate historical data.
-To support feature values where the schema changes over time, we introduced the `Document` struct type.   
+To support feature values where the schema changes over time, we introduced the `Document` struct type.
 Documents are serialized as JSON and supports changes to schema over time, at the cost of a small performance penalty.
 
 ```python
@@ -158,15 +158,16 @@ When using the built-in [embedding functions](/docs/embeddings), then the vector
 from the embedding model.
 
 ```python
-from chalk import features, embedding, vector
+from chalk import embedding
+from chalk.features import features, Vector
 
 @features
 class Document:
     content: str
     # Chalk knows that text-embedding-ada-002 has 1536 dimensions
     embedding: Vector = embedding(
-        feature="content", 
-        provider="openai", 
+        input=lambda: Document.content,
+        provider="openai",
         model="text-embedding-ada-002"
     )
 ```
@@ -175,12 +176,12 @@ By default, vectors are persisted as 16 bit floats for efficiency. However, Chal
 "f32" and "f64", respectively.
 
 ```python
-from chalk import Vector
+from chalk.features import Vector
 
 @features
 class Document:
-    # Defines a vector with 1536 dimensions that will be persisted with 32 bit precision 
-    embedding: Vector["f32", 1536]
+    # Defines a vector with 1536 dimensions that will be persisted with 32 bit precision
+    embedding: Vector["fp32", 1536]
 ```
 
 ---
