--- a/setup-guide.mdx
+++ b/setup-guide.mdx
@@ -52,15 +52,14 @@ root_directory/
 └── requirements.txt
 ```
 The first file, `chalk.yaml`, stores configuration information about your project. You can edit this so it
-contains the following
-   ```
-   project: {YOUR_PROJECT_NAME}
-   environments:
-     default:
-       requirements: requirements.txt
-       runtime: python310
-   ```
-
+contains the following:
+ ```
+ project: {YOUR_PROJECT_NAME}
+ environments:
+   default:
+     requirements: requirements.txt
+     runtime: python312
+```
 The second file, `README.md`, contains some basic commands you can use with the Chalk CLI.
 The third file, `requirements.txt` should look something like this:
 ```
