--- a/validation.mdx
+++ b/validation.mdx
@@ -64,6 +64,6 @@ validation:
 
 environments:
   default:
-    runtimes: 'python310'
+    runtime: 'python312'
     requirements: requirements.txt
 ```
