--- a/underscore.mdx
+++ b/underscore.mdx
@@ -149,6 +149,7 @@ combination with underscore references to transform features:
 
 * [`bytes_to_string`](/api-docs#bytes_to_string)
 * [`coalesce`](/api-docs#coalesce)
+* [`cosine_similarity`](/api-docs#cosine_similarity)
 * [`gunzip`](/api-docs#gunzip)
 * [`json_value`](/api-docs#json_value)
 * [`md5`](/api-docs#md5)
